# cookiecutter-pypackage-zyq

./: README.md  README.rst  cookiecutter.json  pyproject.toml  requirements_dev.txt
.cursor/rules/: python-ci-cd-implementation-rule.mdc  python-code-standards.mdc
.github/workflows/: build-pipeline.yml  publish.yml
docs/: prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: generate_changelog.py
tests/: conftest.py  test_bake_project.py  test_ci_cd.py  test_generate_project.py  test_version_management.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/.cursor/rules/: .mdc  data-jupyter-python-cursor-rules.mdc  python-project-structure-and-workflow.mdc  python-technical-practices.mdc
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: changelog.yml  ci.yml  docs.yml  pdm-test.yml  poetry-test.yml  publish.yml  reusable-changelog.yml  reusable-docs.yml  reusable-publish.yml  reusable-quality.yml  reusable-test.yml  reusable-type-check.yml  test.yml  type-check.yml
{{cookiecutter.project_slug}}/docs/: authors.md  conf.py  contributing.md  developer_guide.md  docker.md  history.md  index.md  index.rst  installation.md  project_structure.md  setup_script.md  usage.md  usage.rst  utils.md  utils.rst  version.md  version.rst
{{cookiecutter.project_slug}}/docs/_includes/: changelog.md  contributing.md  index.md
{{cookiecutter.project_slug}}/docs/api/: index.md
{{cookiecutter.project_slug}}/scripts/: docker-build.bat  docker-build.sh  docker-run.bat  docker-run.sh  docker.py  generate_changelog.py  init.cmd  init.py  init.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  _version.py  app.py  cli.py  data_analysis.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: data_utils.py  file_utils.py  logging_utils.py
{{cookiecutter.project_slug}}/tests/: test_utils.py  test_{{cookiecutter.project_slug}}.py
